# starpilot

./: .gitignore  LICENSE.md  README.md  pyproject.toml
starpilot/: main.py  notes.md
starpilot/utils/: experiment_doc_catagorisation_generation.py  kinda_test.py  manual_check.py  utils.py
tests/: test_utils.py
tests/test_data/: The-Open-Book.json  gh-i.json  pytest.json
