[tool.poetry]
name = "starpilot"
version = "0.1.2"
description = "Discover the hidden power of your GitHub Stars"
authors = ["Dave Parr <8363743+DaveParr@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
starpilot = "starpilot.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
langchain = "^0.1"
chromadb = "0.4.15"
unstructured = "^0.10.29"
markdown = "^3.5.1"
langchainhub = "^0.1.13"
pypandoc = "^1.12"
jq = "^1.6.0"
openai = "^1.12.0"
structlog = "^23.2.0"
graphql-query = "^1.2.2"
gql = { extras = ["all"], version = "^3.5.0" }
langchain-community = "^0.0.24"
langchain-openai = "^0.0.7"
langchain-core = "^0.1.35"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
ruff = "^0.1.4"
icecream = "^2.1.3"
pytest = "^7.4.3"
pytest-vcr = "^1.0.2"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
